# hgx

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  measure_perf.py  mkdocs.yml  pyproject.toml  test_imports.py
.github/workflows/: ci.yml  release.yml  test.yml
autoresearch/: experiment.py
conda-recipe/: README.md  build.sh  meta.yaml
docs/: getting-started.md  index.md
docs/api/: conv.md  dynamic.md  dynamics.md  hypergraph.md  model.md  sparse.md  transforms.md  viz.md
examples/: devograph_benchmark.py  dynamic_topology.py  neural_ode.py  neural_ode_training.py  organoid_benchmark.py  synthetic_classification.py  visualize_hypergraph.py
hgx/: __init__.py  _data.py  _dynamic.py  _dynamics.py  _geometric_dynamics.py  _grn.py  _hypergraph.py  _info_geometry.py  _latent.py  _model.py  _ndp.py  _ot.py  _perturbation.py  _pgmax.py  _pool.py  _sparse.py  _sparse_incidence.py  _temporal.py  _topology.py  _transforms.py  _types.py  _viz.py  _wavelets.py
hgx/_conv/: __init__.py  _base.py  _hgnn.py  _hgnn_sparse.py  _hyperbolic.py  _lorentz.py  _product.py  _se3.py  _sheaf.py  _thnn.py  _thnn_sparse.py  _unigat.py  _unigcn.py  _unigcn_sparse.py  _unigin.py
manuscript/: config.yaml
scripts/: benchmark_standard.py  recipe_alignment.py  speed_comparison.py
test/: conftest.py  test_conv.py  test_data.py  test_dynamic.py  test_dynamics.py  test_geometric_dynamics.py  test_grn.py  test_hgnn_conv.py  test_hyperbolic.py  test_hypergraph.py  test_imports.py  test_info_geometry.py  test_integration.py  test_jit_vmap.py  test_known_answers.py  test_latent.py  test_lorentz.py  test_mathematical.py  test_model.py  test_ndp.py  test_ot.py  test_perturbation.py  test_pgmax.py  test_pool.py  test_product.py  test_se3.py  test_sheaf.py  test_sparse.py  test_sparse_incidence.py  test_temporal.py  test_topology.py  test_transforms.py  test_viz.py  test_wavelets.py
